fix: sales and event create